# birka-memory-vault

./: .gitignore  INTEGRATION.md  LICENSE  README.md  alembic.ini  birka_memory.db  pyproject.toml  requirements.txt  test_hooks.py  test_memory.py
.kilo/plans/: 1779614398877-shiny-tiger.md
alembic/: env.py
alembic/versions/: 218af7b1c0e9_rename_birka_fleet_to_agent_fleet.py  61f2b2393b09_add_openclaw_v2_orchestrator_tables.py  746b11927162_add_agent_id_to_memory_entry.py  e23726a6b99e_initial_memory_vault_schema.py
birka_memory_vault/: __init__.py  database.py  embeddings.py  events.py  hooks.py  models.py  retrieval.py  schemas.py  vector_store.py
docs/: index.html  quickstart.md
engram/: __init__.py  database.py  events.py  hooks.py  models.py  schemas.py
examples/: integration_example.py
tests/: conftest.py  test_agent_isolation.py  test_embeddings.py  test_hooks.py  test_memory.py  test_retrieval.py  test_vector_store.py
